Demo project for bug 534074
importing system packages (like javax.annotation)
no longer works with Java 9
Looks like we have to add JVM args
"--add-modules ALL-SYSTEM"

to the Equinox VM forked by surefire with Java >= 9

Change-Id: I5e7a67def685e4030a2436d89db51e3ba50f9ee1